codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_surface_previews_hardcoded_only.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: snapshot
---
status line: my-project  ·  feat/awesome-feature  ·  thread title  ·  Read Only  ·  Ask for approval
terminal title: thread title | feat/awesome-feature | Tasks 2/5
