codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_surface_previews_live_only.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: snapshot
---
status line: preview-live-root  ·  feature/live-preview-branch  ·  Live preview thread
terminal title: preview-live-root | Live preview thread | feature/live-preview-branch | Tasks 2/5
